# geekbrains_home_flask

./: .gitignore  LICENSE  README.md  pyproject.toml
blog/: admin.py  app.py  config.py
blog/api/: __init__.py  article.py  author.py  database.py  tag.py  user.py  user.py.c4cf9f61cc331ccad7beea0087b11bb7.py
blog/forms/: article.py  user.py
blog/models/: __init__.py  article.py  article_tag.py  author.py  database.py  tag.py  user.py
blog/schema/: __init__.py  article.py  author.py  tag.py  user.py
blog/templates/: base.html  css_include.html  index.html  navigate.html
blog/templates/article/: create.html  detail.html  list.html
blog/templates/auth/: login.html  register.html
blog/templates/authors/: list.html
blog/templates/macro/: formhelpers.html
blog/templates/user/: detail.html  list.html  profile.html
blog/views/: article.py  auth.py  author.py  user.py
docker/: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
migrations/versions/: 0a2b3c36e883_add_tag_model.py  20654f54161c_add_fist_and_last_name_to_user_model.py  286b989725bf_add_tag_articles.py  29c9837981a9_create_user.py  959bae6f0995_add_email_field_to_user_model.py  9f0140e27581_add_password_to_usermodel.py  b224dbcd709e_set_unique_email_from_user_model.py  b7aaea603c0b_fix_article.py  c6515fbc757d_add_author_model.py  cdbd7a35c8b2_make_tag_uniqe_name.py  f57a33f4f132_add_article_model.py
